--- a/config.json
+++ b/config.json
@@ -48,14 +48,14 @@
     "arbol": { "hambre": -25, "energia": 10 },
     "medikit": { "saludFisica": 20, "saludMental": 10 },
     "psicologo": { "saludMental": 25, "confianza": 10, "ansiedad": -40 },
-    "banera": { "felicidad": 10, "saludMental": 15 },
+    "banera": { "ansiedad": -15, "felicidad": 10, "saludMental": 15 },
     "comida-casa": { "hambre": -18, "energia": 5 },
     "chocolate": { "felicidad": 50 },
     "libro": { "confianza": 10, "felicidad": 5 },
     "puesto-trabajo": { "ansiedad": -20 },
     "gimnasio": { "saludFisica": 18, "saludMental": 13, "energia": -20, "ansiedad": -16 },
     "cama": { "energia": 100 },
-    "cris-visita": { "ansiedad": -30, "saludMental": 18 },
+    "cris-visita": { "ansiedad": -100, "saludMental": 38 },
     "cris-llamada": { "ansiedad": -90, "saludMental": 10, "felicidad": 10 },
     "musica": { "felicidad": 4, "ansiedad": -6, "saludMental": 4 }
   },
