--- a/config.json
+++ b/config.json
@@ -67,7 +67,8 @@
   "modificadoresGlobales": {
     "hambre": 0.12,
     "energia": -0.16,
-    "felicidad": -0.04
+    "felicidad": -0.04,
+    "saludFisica": -1,
   },
   "psicologoMinDias": 20,
   "trabajoDias": [1, 2, 3, 4, 5],
