--- a/config.json
+++ b/config.json
@@ -1,28 +1,28 @@
 {
   "tileWidth": 64,
   "tileHeight": 32,
-  "gridWidth": 48,
-  "gridHeight": 48,
+  "gridWidth": 24,
+  "gridHeight": 16,
   "zonas": [
-    { "nombre": "Parque", "emoji": "🏞️", "id": "parque", "fromX": 2, "fromY": 2, "toX": 15, "toY": 15, "color": "#5b8c37" },
-    { "nombre": "Restaurante", "emoji": "🍽️", "id": "restaurante", "fromX": 20, "fromY": 2, "toX": 29, "toY": 9, "color": "#e0a040" },
-    { "nombre": "Hospital", "emoji": "🏥", "id": "hospital", "fromX": 33, "fromY": 2, "toX": 44, "toY": 10, "color": "#b3c7e6" },
-    { "nombre": "Casa", "emoji": "🏠", "id": "casa", "fromX": 8, "fromY": 20, "toX": 18, "toY": 28, "color": "#c1a87d" },
-    { "nombre": "Trabajo", "emoji": "🏢", "id": "trabajo", "fromX": 34, "fromY": 22, "toX": 44, "toY": 28, "color": "#aaa" },
-    { "nombre": "Gimnasio", "emoji": "🏋️", "id": "gimnasio", "fromX": 19, "fromY": 32, "toX": 28, "toY": 40, "color": "#99bbff" }
+    { "nombre": "Parque", "emoji": "🏞️", "id": "parque", "fromX": 0, "fromY": 0, "toX": 6, "toY": 5, "color": "#5b8c37" },
+    { "nombre": "Restaurante", "emoji": "🍽️", "id": "restaurante", "fromX": 7, "fromY": 1, "toX": 11, "toY": 4, "color": "#e0a040" },
+    { "nombre": "Hospital", "emoji": "🏥", "id": "hospital", "fromX": 17, "fromY": 0, "toX": 23, "toY": 6, "color": "#b3c7e6" },
+    { "nombre": "Casa", "emoji": "🏠", "id": "casa", "fromX": 1, "fromY": 10, "toX": 6, "toY": 15, "color": "#c1a87d" },
+    { "nombre": "Trabajo", "emoji": "🏢", "id": "trabajo", "fromX": 12, "fromY": 10, "toX": 17, "toY": 15, "color": "#aaa" },
+    { "nombre": "Gimnasio", "emoji": "🏋️", "id": "gimnasio", "fromX": 19, "fromY": 8, "toX": 23, "toY": 15, "color": "#99bbff" }
   ],
   "objetos": [
-    { "id": "pelota", "name": "Pelota", "icon": "⚽", "zona": "parque", "pos": { "x": 5, "y": 5 } },
-    { "id": "arbol", "name": "Árbol de comida", "icon": "🌳", "zona": "restaurante", "pos": { "x": 25, "y": 5 } },
-    { "id": "medikit", "name": "Botiquín", "icon": "💊", "zona": "hospital", "pos": { "x": 40, "y": 5 } },
-    { "id": "psicologo", "name": "Psicólogo", "icon": "🧑‍⚕️", "zona": "hospital", "pos": { "x": 42, "y": 7 } },
-    { "id": "banera", "name": "Bañera", "icon": "🛁", "zona": "casa", "pos": { "x": 10, "y": 25 } },
-    { "id": "comida-casa", "name": "Comida en casa", "icon": "🍲", "zona": "casa", "pos": { "x": 12, "y": 22 } },
-    { "id": "chocolate", "name": "Chocolate", "icon": "🍫", "zona": "restaurante", "pos": { "x": 27, "y": 6 } },
-    { "id": "libro", "name": "Libro", "icon": "📖", "zona": "casa", "pos": { "x": 15, "y": 27 } },
-    { "id": "puesto-trabajo", "name": "Puesto de trabajo", "icon": "💼", "zona": "trabajo", "pos": { "x": 39, "y": 25 } },
-    { "id": "gimnasio", "name": "Gimnasio", "icon": "🏋️", "zona": "gimnasio", "pos": { "x": 23, "y": 36 } },
-    { "id": "cama", "name": "Cama", "icon": "🛏️", "zona": "casa", "pos": { "x": 14, "y": 26 } }
+    { "id": "pelota", "name": "Pelota", "icon": "⚽", "zona": "parque", "pos": { "x": 2, "y": 2 } },
+    { "id": "arbol", "name": "Árbol", "icon": "🌳", "zona": "parque", "pos": { "x": 5, "y": 5 } },
+    { "id": "medikit", "name": "Botiquín", "icon": "💊", "zona": "hospital", "pos": { "x": 20, "y": 3 } },
+    { "id": "psicologo", "name": "Psicólogo", "icon": "🧑‍⚕️", "zona": "hospital", "pos": { "x": 18, "y": 2 } },
+    { "id": "banera", "name": "Bañera", "icon": "🛁", "zona": "casa", "pos": { "x": 3, "y": 13 } },
+    { "id": "comida-casa", "name": "Comida", "icon": "🍲", "zona": "casa", "pos": { "x": 5, "y": 12 } },
+    { "id": "chocolate", "name": "Chocolate", "icon": "🍫", "zona": "restaurante", "pos": { "x": 9, "y": 2 } },
+    { "id": "libro", "name": "Libro", "icon": "📖", "zona": "casa", "pos": { "x": 2, "y": 11 } },
+    { "id": "puesto-trabajo", "name": "Puesto de trabajo", "icon": "💼", "zona": "trabajo", "pos": { "x": 15, "y": 12 } },
+    { "id": "gimnasio", "name": "Gimnasio", "icon": "🏋️", "zona": "gimnasio", "pos": { "x": 20, "y": 13 } },
+    { "id": "cama", "name": "Cama", "icon": "🛏️", "zona": "casa", "pos": { "x": 4, "y": 14 } }
   ],
   "segundo": 1000,
   "minuto": 60000,
@@ -65,13 +65,12 @@
     "parque": { "felicidad": 0.11, "ansiedad": -0.14 }
   },
   "modificadoresGlobales": {
-    "hambre": 0.12,
+    "hambre": 0.14,
     "energia": -0.16,
     "felicidad": -0.04,
-    "ansiedad": 0.16
+    "ansiedad": 0.18
   },
   "psicologoMinDias": 20,
-  "trabajoDias": [1, 2, 3, 4, 5],
   "personaje": {
     "id": "Tamago",
     "nombre": "Tamago",
@@ -92,16 +91,16 @@
   "cris": {
     "nombre": "Cris",
     "emoji": "😄",
-    "aparicionMin": 5,
-    "aparicionMax": 5,
+    "aparicionMin": 4,
+    "aparicionMax": 4,
     "duracionVisitaDias": 1,
     "llamadaCooldown": 1
   },
   "zoomMin": 0.5,
   "zoomMax": 2.2,
   "zoomStep": 0.18,
-  "canvasOffsetX": 800,
-  "canvasOffsetY": 140,
+  "canvasOffsetX": 350,
+  "canvasOffsetY": 90,
   "felicidadAnsiedadUmbral": 50,
   "felicidadAnsiedadDecaimiento": 12,
   "accionRebajaAnsiedad": { "min": 3, "max": 6 },
