--- a/config.json
+++ b/config.json
@@ -61,7 +61,8 @@
   },
   "modificadoresZona": {
     "calle": { "saludMental": -0.19, "ansiedad": 0.28 },
-    "trabajo": { "energia": -0.29, "saludMental": -0.44, "ansiedad": -0.15 },
+    "trabajo": { "energia": -0.29, "saludMental": -0.44, "saludFisica": -0.38, "ansiedad": -0.15 },
+    "gimnasio": { "saludFisica": 0.38, "saludMental": 0.13, "energia": -0.20, "ansiedad": -0.16 },
     "parque": { "felicidad": 0.11, "ansiedad": -0.14 }
   },
   "modificadoresGlobales": {
