--- a/config.json
+++ b/config.json
@@ -12,14 +12,14 @@
     { "nombre": "Gimnasio", "emoji": "🏋️", "id": "gimnasio", "fromX": 19, "fromY": 8, "toX": 23, "toY": 15, "color": "#99bbff" }
   ],
   "objetos": [
-    { "id": "pelota", "name": "Pelota", "icon": "⚽", "zona": "parque", "pos": { "x": 4, "y": 2 } },
-    { "id": "arbol", "name": "Árbol", "icon": "🌳", "zona": "parque", "pos": { "x": 3, "y": 4 } },
+    { "id": "pelota", "name": "Pelota", "icon": "⚽", "zona": "parque", "pos": { "x": 2, "y": 2 } },
+    { "id": "arbol", "name": "Árbol", "icon": "🌳", "zona": "parque", "pos": { "x": 5, "y": 5 } },
     { "id": "medikit", "name": "Botiquín", "icon": "💊", "zona": "hospital", "pos": { "x": 20, "y": 3 } },
     { "id": "psicologo", "name": "Psicólogo", "icon": "🧑‍⚕️", "zona": "hospital", "pos": { "x": 18, "y": 2 } },
-    { "id": "banera", "name": "Bañera", "icon": "🛁", "zona": "casa", "pos": { "x": 2, "y": 14 } },
+    { "id": "banera", "name": "Bañera", "icon": "🛁", "zona": "casa", "pos": { "x": 3, "y": 13 } },
     { "id": "comida-casa", "name": "Comida", "icon": "🍲", "zona": "casa", "pos": { "x": 5, "y": 12 } },
     { "id": "chocolate", "name": "Chocolate", "icon": "🍫", "zona": "restaurante", "pos": { "x": 9, "y": 2 } },
-    { "id": "libro", "name": "Libro", "icon": "📖", "zona": "casa", "pos": { "x": 4, "y": 11 } },
+    { "id": "libro", "name": "Libro", "icon": "📖", "zona": "casa", "pos": { "x": 2, "y": 11 } },
     { "id": "puesto-trabajo", "name": "Puesto de trabajo", "icon": "💼", "zona": "trabajo", "pos": { "x": 15, "y": 12 } },
     { "id": "gimnasio", "name": "Gimnasio", "icon": "🏋️", "zona": "gimnasio", "pos": { "x": 20, "y": 13 } },
     { "id": "cama", "name": "Cama", "icon": "🛏️", "zona": "casa", "pos": { "x": 4, "y": 14 } }
@@ -60,9 +60,8 @@
     "musica": { "felicidad": 4, "ansiedad": -6, "saludMental": 4 }
   },
   "modificadoresZona": {
-    "calle": { "saludMental": -0.19, "ansiedad": 0.28 },
-    "trabajo": { "energia": -0.29, "saludMental": -0.44, "saludFisica": -0.38, "ansiedad": -0.15 },
-    "gimnasio": { "saludFisica": 0.38, "saludMental": 0.13, "energia": -0.20, "ansiedad": -0.16 },
+    "calle": { "saludMental": -0.19, "ansiedad": 0.18 },
+    "trabajo": { "energia": -0.09, "saludMental": -0.04, "ansiedad": -0.15 },
     "parque": { "felicidad": 0.11, "ansiedad": -0.14 }
   },
   "modificadoresGlobales": {
@@ -93,9 +92,7 @@
     "nombre": "Cris",
     "emoji": "😄",
     "aparicionMin": 4,
-    "aparicionMax": 4,
-    "duracionVisitaDias": 1,
-    "llamadaCooldown": 1
+    "duracionVisitaDias": 1
   },
   "zoomMin": 0.5,
   "zoomMax": 2.2,
