--- a/config.json
+++ b/config.json
@@ -26,80 +26,80 @@
   ],
   "segundo": 1000,
   "minuto": 60000,
-  "turno": 60000,
-  "gameTick": 500,
-  "ticksPerTurn": 120,
-  "inactividadMs": 10000,
+  "turno": 180000,              // 1 turno = 3 minutos (antes 1 minuto)
+  "gameTick": 1000,             // 1 tick = 1 segundo (antes 500ms)
+  "ticksPerTurn": 180,          // 180 ticks para un turno de 3 minutos
+  "inactividadMs": 25000,       // 25 segundos para inactividad (antes 10s)
   "cooldowns": {
-    "pelota": 5,
-    "arbol": 6,
-    "medikit": 8,
-    "psicologo": 20,
-    "banera": 4,
-    "comida-casa": 6,
-    "chocolate": 10,
-    "libro": 7,
+    "pelota": 8,
+    "arbol": 10,
+    "medikit": 15,
+    "psicologo": 30,
+    "banera": 8,
+    "comida-casa": 10,
+    "chocolate": 18,
+    "libro": 12,
     "puesto-trabajo": 1,
-    "gimnasio": 4,
-    "cama": 8
+    "gimnasio": 10,
+    "cama": 18
   },
   "efectos": {
-    "pelota": { "felicidad": 15 },
-    "arbol": { "hambre": -25, "energia": 10 },
-    "medikit": { "saludFisica": 20, "saludMental": 10 },
-    "psicologo": { "saludMental": 25, "confianza": 10, "ansiedad": -40 },
-    "banera": { "felicidad": 10, "saludMental": 15 },
-    "comida-casa": { "hambre": -18, "energia": 5 },
-    "chocolate": { "felicidad": 50 },
-    "libro": { "confianza": 10, "felicidad": 5 },
-    "puesto-trabajo": { "ansiedad": -20, "energia": -8, "saludMental": -6, "felicidad": 7 },
-    "gimnasio": { "saludFisica": 18, "saludMental": 13, "energia": -20, "ansiedad": -16 },
+    "pelota": { "felicidad": 10 },
+    "arbol": { "hambre": -15, "energia": 8 },
+    "medikit": { "saludFisica": 16, "saludMental": 7 },
+    "psicologo": { "saludMental": 17, "confianza": 10, "ansiedad": -24 },
+    "banera": { "felicidad": 7, "saludMental": 10 },
+    "comida-casa": { "hambre": -15, "energia": 6 },
+    "chocolate": { "felicidad": 25 },
+    "libro": { "confianza": 7, "felicidad": 5 },
+    "puesto-trabajo": { "ansiedad": -8, "energia": -5, "saludMental": -4, "felicidad": 4 },
+    "gimnasio": { "saludFisica": 13, "saludMental": 8, "energia": -14, "ansiedad": -8 },
     "cama": { "energia": 100 },
-    "cris-visita": { "ansiedad": -30, "saludMental": 18 },
-    "cris-llamada": { "ansiedad": -9, "saludMental": 10, "felicidad": 10 },
-    "musica": { "felicidad": 4, "ansiedad": -6, "saludMental": 4 },
-    "picadura-insecto": { "saludFisica": -10, "ansiedad": 10 },
-    "lesion-gym": { "saludFisica": -25, "felicidad": -10, "energia": -25, "ansiedad": 14 },
-    "lesion-casa": { "saludFisica": -5, "felicidad": -3 },
-    "reunion-trabajo": { "ansiedad": 18 },
-    "enfermedad-hospital": { "saludFisica": -20, "ansiedad": 10, "felicidad": -10 },
-    "enfermedad-grave": { "saludFisica": -45, "ansiedad": 30, "felicidad": -35 },
-    "depresion": { "felicidad": -15, "energia": -10, "ansiedad": 10 }
+    "cris-visita": { "ansiedad": -15, "saludMental": 10 },
+    "cris-llamada": { "ansiedad": -4, "saludMental": 6, "felicidad": 5 },
+    "musica": { "felicidad": 2, "ansiedad": -3, "saludMental": 3 },
+    "picadura-insecto": { "saludFisica": -4, "ansiedad": 4 },
+    "lesion-gym": { "saludFisica": -10, "felicidad": -4, "energia": -10, "ansiedad": 6 },
+    "lesion-casa": { "saludFisica": -3, "felicidad": -1 },
+    "reunion-trabajo": { "ansiedad": 7 },
+    "enfermedad-hospital": { "saludFisica": -8, "ansiedad": 3, "felicidad": -5 },
+    "enfermedad-grave": { "saludFisica": -18, "ansiedad": 12, "felicidad": -14 },
+    "depresion": { "felicidad": -7, "energia": -5, "ansiedad": 6 }
   },
   "eventos": {
-    "picaduraInsecto": { "zonas": ["parque"], "prob": 0.09, "efecto": "picadura-insecto", "msg": "¡Te ha picado un insecto! (parque)" },
-    "lesionGym": { "zonas": ["gimnasio"], "prob": 0.11, "efecto": "lesion-gym", "msg": "¡Te has lesionado haciendo ejercicio! (gimnasio)" },
-    "lesionCasa": { "zonas": ["casa"], "prob": 0.03, "efecto": "lesion-casa", "msg": "¡Te has hecho daño en casa!" },
-    "reunionTrabajo": { "zonas": ["trabajo"], "prob": 0.12, "efecto": "reunion-trabajo", "msg": "¡Reunión sorpresa en el trabajo! (ansiedad+)" },
-    "enfermarHospital": { "zonas": ["hospital"], "prob": 0.08, "efecto": "enfermedad-hospital", "msg": "¡Te has contagiado en el hospital!" },
-    "enfermedadGrave": { "zonas": ["hospital"], "prob": 0.025, "efecto": "enfermedad-grave", "msg": "¡Te han detectado una enfermedad grave!" }
+    "picaduraInsecto": { "zonas": ["parque"], "prob": 0.012, "efecto": "picadura-insecto", "msg": "¡Te ha picado un insecto! (parque)" },
+    "lesionGym": { "zonas": ["gimnasio"], "prob": 0.018, "efecto": "lesion-gym", "msg": "¡Te has lesionado haciendo ejercicio! (gimnasio)" },
+    "lesionCasa": { "zonas": ["casa"], "prob": 0.008, "efecto": "lesion-casa", "msg": "¡Te has hecho daño en casa!" },
+    "reunionTrabajo": { "zonas": ["trabajo"], "prob": 0.016, "efecto": "reunion-trabajo", "msg": "¡Reunión sorpresa en el trabajo! (ansiedad+)" },
+    "enfermarHospital": { "zonas": ["hospital"], "prob": 0.011, "efecto": "enfermedad-hospital", "msg": "¡Te has contagiado en el hospital!" },
+    "enfermedadGrave": { "zonas": ["hospital"], "prob": 0.004, "efecto": "enfermedad-grave", "msg": "¡Te han detectado una enfermedad grave!" }
   },
   "modificadoresZona": {
-    "calle": { "saludMental": -0.19, "ansiedad": 0.18 },
-    "trabajo": { "energia": -0.09, "saludMental": -0.04, "ansiedad": -0.15 },
-    "parque": { "felicidad": 0.11, "ansiedad": -0.14 }
+    "calle": { "saludMental": -0.04, "ansiedad": 0.06 },
+    "trabajo": { "energia": -0.03, "saludMental": -0.02, "ansiedad": -0.04 },
+    "parque": { "felicidad": 0.03, "ansiedad": -0.06 }
   },
   "modificadoresGlobales": {
-    "hambre": 0.14,
-    "energia": -0.16,
-    "felicidad": -0.04,
-    "saludFisica": -0.18
+    "hambre": 0.06,
+    "energia": -0.07,
+    "felicidad": -0.02,
+    "saludFisica": -0.06
   },
-  "psicologoMinDias": 20,
+  "psicologoMinDias": 16,
   "personaje": {
     "id": "Tamago",
     "nombre": "Tamago",
     "personalidad": "sensible",
     "stats": {
-      "hambre": 80,
-      "felicidad": 60,
+      "hambre": 70,
+      "felicidad": 65,
       "energia": 75,
-      "confianza": 60,
+      "confianza": 70,
       "saludFisica": 100,
       "saludMental": 90,
       "depresion": 0
     },
-    "vinculo": 60,
+    "vinculo": 70,
     "tlpActivo": true,
     "estadoEmocional": "feliz",
     "posicion": { "x": 8, "y": 8 }
@@ -107,20 +107,19 @@
   "cris": {
     "nombre": "Cris",
     "emoji": "😄",
-    "aparicionMin": 4,
+    "aparicionMin": ,
     "duracionVisitaDias": 1
   },
-  "zoomMin": 0.5,
+  "zoomMin": 0.7,
   "zoomMax": 2.2,
-  "zoomStep": 0.18,
-  "felicidadAnsiedadUmbral": 50,
-  "felicidadAnsiedadDecaimiento": 12,
-  "accionRebajaAnsiedad": { "min": 3, "max": 6 },
-  "turnoConfianza": 10,
-  "turnoVinculo": 10,
-  "turnoAnsiedadRebaja": 7,
-  "trabajoNoHechoAnsiedad": 18,
-
+  "zoomStep": 0.15,
+  "felicidadAnsiedadUmbral": 60,
+  "felicidadAnsiedadDecaimiento": 8,
+  "accionRebajaAnsiedad": { "min": 2, "max": 4 },
+  "turnoConfianza": 6,
+  "turnoVinculo": 7,
+  "turnoAnsiedadRebaja": 5,
+  "trabajoNoHechoAnsiedad": 8,
   "enableRandomEvents": true,
   "enableNormalEvents": true
 }
