--- a/config.json
+++ b/config.json
@@ -36,7 +36,7 @@
     "medikit": 1,
     "psicologo": 20,
     "banera": 1,
-    "comida-casa": 1,
+    "comida-casa": 0.33,
     "chocolate": 1,
     "libro": 1,
     "puesto-trabajo": 1,
@@ -51,16 +51,16 @@
     "banera": { "felicidad": 7, "saludMental": 10 },
     "comida-casa": { "hambre": -15, "energia": 6 },
     "chocolate": { "felicidad": 25 },
-    "libro": { "confianza": 7, "felicidad": 5 },
+    "libro": { "confianza": 7, "depresion": 100, "felicidad": 5 },
     "puesto-trabajo": { "ansiedad": -8, "energia": -5, "saludMental": -4, "felicidad": 4 },
     "gimnasio": { "saludFisica": 13, "saludMental": 8, "energia": -14, "ansiedad": -8 },
     "cama": { "energia": 100 },
-    "cris-visita": { "ansiedad": -15, "saludMental": 10 },
+    "cris-visita": { "ansiedad": -25, "saludMental": 20 },
     "cris-llamada": { "ansiedad": -4, "saludMental": 6, "felicidad": 5 },
-    "musica": { "felicidad": 2, "ansiedad": -3, "saludMental": 3 },
+    "musica": { "felicidad": 10, "ansiedad": -32, "saludMental": 32 },
     "picadura-insecto": { "saludFisica": -4, "ansiedad": 4 },
-    "lesion-gym": { "saludFisica": -10, "felicidad": -4, "energia": -10, "ansiedad": 6 },
-    "lesion-casa": { "saludFisica": -3, "felicidad": -1 },
+    "lesion-gym": { "saludFisica": -10, "felicidad": -14, "energia": -10, "ansiedad": 16 },
+    "lesion-casa": { "saludFisica": -3, "felicidad": -9 },
     "reunion-trabajo": { "ansiedad": 7 },
     "enfermedad-hospital": { "saludFisica": -8, "ansiedad": 3, "felicidad": -5 },
     "enfermedad-grave": { "saludFisica": -18, "ansiedad": 12, "felicidad": -14 },
